--- a/TemplateMatching/TemplateMatching.vcxproj
+++ b/TemplateMatching/TemplateMatching.vcxproj
@@ -147,6 +147,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="bmp.h" />
+    <ClInclude Include="bmp_util.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="bmp_util.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
